[package]
name = "building-blocks-2"
version = "0.1.0"
authors = ["SF-Zhou <sfzhou.scut@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.2"
bson = "0.14"
rand = "0.7"
