[package]
name = "kvs"
version = "0.1.0"
authors = ["SF-Zhou <sfzhou.scut@gmail.com>"]
description = "A key-value store"
edition = "2018"

[dependencies]
bson = "0.14"
failure = "0.1.5"
serde =  { version = "1.0", features = ["derive"] }
structopt = { version = "0.3.2", default-features = false }
tempfile = "3.1.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
walkdir = "2.2.7"
