[package]
name = "kvs"
version = "0.1.0"
authors = ["SF-Zhou <sfzhou.scut@gmail.com>"]
description = "A key-value store"
edition = "2018"

[dependencies]
bson = "0.14"
clap = "2.33.0"
env_logger = "0.6.1"
failure = "0.1.5"
log = "0.4.6"
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0.39"
sled = "0.22.1"
structopt = { version = "0.3.2", default-features = false }
tempfile = "3.1.0"

[dev-dependencies]
assert_cmd = "0.11.0"
criterion = "0.2.11"
predicates = "1.0.0"
rand = "0.6.5"
walkdir = "2.2.7"
